# skills_talk_agent_camp_2026

./: .env.example  .gitignore  AUDIENCE_GUIDE.md  GitHub Archive Exploratory Analysis.ipynb  Makefile  PRODUCT_BACKLOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
NOT_TO_READ_ASSISTANT/: AUDIENCE_GUIDE.md
NOT_TO_READ_ASSISTANT/docs/: ARCHITECTURE.md  PRESENTER_GUIDE.md
agentic_system/: README.md  config.py  demo.py  main.py  memory.py  models.py  orchestrator.py  scenario.py  setup.py
agentic_system/observability/: logger.py
agentic_system/schema/: github_events.yaml
agentic_system/tui/: app.py
backlog/: AGT-01.md  AGT-02.md  AGT-03.md  AGT-04.md  AGT-05.md  AGT-06.md  AGT-07.md  AGT-08.md  AGT-09.md  AGT-10.md  DEV-01.md  DEV-02.md  DEV-03.md  DEV-04.md  DEV-05.md  DEV-06.md  DEV-07.md  DEV-08.md  DEV-09.md  DEV-10.md  DEV-11.md  DEV-12.md  DEV-13.md  DEV-14.md  DOC-01.md  IMP-01.md  IMP-02.md  IMP-03.md  IMP-04.md  IMP-05.md  IMP-06.md  INF-00.md  INF-01.md  INF-02.md  INF-03.md  INF-04.md  INF-05.md  INF-06.md  INF-07.md  INF-08.md  (+25 more)
db/: README.md
dev_tools/: README.md  models.py  schema_sync.py
docs/: DEV_TOOLS.md  SCHEMA_REFERENCE.md  TROUBLESHOOTING.md
scripts/: backlog_board.py  cleanup_infra.sh  debug_run_sql.py  debug_vector_search.py  explore_vectordb.py  migrate_schema.py  rollback_schema.py  setup_infra.sh  validate_schema.py  verify_complete_flow.sh
tests/: README.md  conftest.py  test_agents.py  test_complete_flow_mocked.py  test_schema_sync.py  test_schema_upgrade_gate.py  test_use_case.py
(+43 files in other folders)
